Fixed svcards on mobile devices again

--- a/Styles/style_main.css
+++ b/Styles/style_main.css
@@ -390,11 +390,6 @@ a:hover {
 .svcard:hover {
   border-color: #009090;
   box-shadow: 0px 0px 20px rgba(0, 90, 90, 0.5);
-
-  /* border-top-width: 10px; */
-  /* border-right-width: 1px; */
-  /* border-bottom-width: 10px; */
-  /* border-left-width: 1px; */
 }
 .svcard-img-top {
   border-top-left-radius: inherit;
@@ -500,6 +495,7 @@ a:hover {
 }
 .contact-btn {
   border-radius: 5px;
+  border-color: #004444;
   padding: 10px 15px;
   margin: 10px auto;
   display: grid;
@@ -524,23 +520,29 @@ a:hover {
   .svcards {
     grid-gap: 30px;
     grid-auto-flow: column;
+    grid-auto-columns: 300px;
     scroll-snap-type: x proximity;
-    /* max-width: calc(40vw + 250px); */
     max-width: 90vw;
     margin-inline: auto;
+    padding-block: 20px;
   }
   .svcard {
     scroll-snap-align: center;
   }
-  .svcards::before {
+  .svcards::before,
+  .svcards::after {
+    text-align: center;
     font-style: oblique;
-    color: #009090;
-    content: 'Карточки справа';
     align-self: center;
+    color: #009090;
+  }
+  .svcards::before {
+    max-width: 80px;
+    content: 'Карточки справа';
   }
   .svcards::after {
-    content: '';
-    min-width: 120px;
+    max-width: 60px;
+    content: 'Карточки слева';
   }
 }
 @media (max-width: 600px) {
